# Healthcare-Assistant

./: .gitignore  Commands to run.txt  README.md  healthApp.py  health_agent.py  hello.py  pyproject.toml  style.css
Evaluation/: README.md  dev_en.json
Evaluation/evaluation_of_performance/: README.md
Evaluation/evaluation_of_safety/: README.md  dev_zh.json
Evaluation/evaluation_of_safety/evaluation/: __init__.py  metrics.py
Evaluation/performance_evaluation/: README.md
Evaluation/performance_evaluation/pipline/: evaluate_from_mmlu_college_medicine.py  evaluate_from_mmlu_pro.py  evaluate_from_mmlu_pro_RAG.py  evaluate_from_mmlu_professional_medicine.py
Evaluation/safety_evaluation/: README.md  __init__.py  setup.py  test2.json
Evaluation/safety_evaluation/Medical Safety Benchmarking Dataset/: README.md  dev_en.json  processed_results.json  prompts.json  results.jsonl  test_en.json
Evaluation/safety_evaluation/data/: test1.json  test2.json
Evaluation/safety_evaluation/evaluation/: evaluator.py  metrics.py  running.py
Final/: RAGComponent.py  README.md  Scrape_NHS.py  healthApp.py  link_scraper.py  nhs_illnesses.json  populate_db.py  tts_G.py
Final/NLU_module/: __init__.py  main.py
Final/NLU_module/agents/: adviser.py
Final/assets/: style.css
GUI/: Commands to run.txt  healthApp.py  requirements.txt
LLM/: LLMComponent.py
NLU/: __init__.py  main.py
RAG/: RAGComponent.py  RAGModule.py  Scrape_NHS.py  link_scraper.py  populate_db.py  summarizer.py  testing_notebook.ipynb
TTS/: README.md  tts-2.py  tts.py
minutes/: 27-01-2025.md
(+7 files in other folders)
