[project]
name = "healthcare-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "groq>=0.20.0",
    "gtts>=2.5.4",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "panel>=1.6.2",
    "pyaudio>=0.2.14",
    "pydantic-ai>=0.0.46",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "scipy>=1.15.2",
    "setuptools-rust>=1.11.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.2",
    "whisper>=1.1.10",
]
